implement memory repo
