# internal/ports/http/v1/handler.go
@@ -2,11 +2,13 @@ package v1
 
 import (
 	"encoding/json"
+	"errors"
 	"io"
 	"net/http"
 
 	"github.com/feynmaz/fresheggs/internal/app"
 	httptools "github.com/feynmaz/fresheggs/internal/common/http"
+	"github.com/feynmaz/fresheggs/internal/domain/product"
 	"github.com/go-chi/chi/v5"
 )
 
@@ -30,7 +32,7 @@ func (h handler) PostProduct(w http.ResponseWriter, r *http.Request) {
 	body, _ := io.ReadAll(r.Body)
 	_ = json.Unmarshal(body, &productCreate)
 
-	p, err := h.productService.CreateProduct(productCreate)
+	p, err := h.productService.CreateProduct(r.Context(), productCreate)
 	if err != nil {
 		httptools.SendJSONResponse(w, http.StatusInternalServerError, err)
 		return
@@ -48,7 +50,7 @@ func (h handler) PostProduct(w http.ResponseWriter, r *http.Request) {
 // Delete product by ID
 // (DELETE /product/{product_id})
 func (h handler) DeleteProductProductId(w http.ResponseWriter, r *http.Request, productId string) {
-	if err := h.productService.DeleteProduct(productId); err != nil {
+	if err := h.productService.DeleteProduct(r.Context(), productId); err != nil {
 		httptools.SendJSONResponse(w, http.StatusInternalServerError, err)
 		return
 	}
@@ -58,7 +60,15 @@ func (h handler) DeleteProductProductId(w http.ResponseWriter, r *http.Request, 
 // Get product by ID
 // (GET /product/{product_id})
 func (h handler) GetProductProductId(w http.ResponseWriter, r *http.Request, productId string) {
-	p := h.productService.GetProduct(productId)
+	p, err := h.productService.GetProduct(r.Context(), productId)
+	if err != nil {
+		if errors.Is(err, product.ErrProductNotFound) {
+			httptools.SendJSONResponse(w, http.StatusNotFound, err)
+			return
+		}
+		httptools.SendJSONResponse(w, http.StatusInternalServerError, err)
+		return
+	}
 	product := Product{
 		Description:   p.Description,
 		Name:          p.Name,
@@ -72,11 +82,25 @@ func (h handler) GetProductProductId(w http.ResponseWriter, r *http.Request, pro
 // Update product by ID
 // (PATCH /product/{product_id})
 func (h handler) PatchProductProductId(w http.ResponseWriter, r *http.Request, productId string) {
+	var productPatch ProductPatch
+	body, _ := io.ReadAll(r.Body)
+	_ = json.Unmarshal(body, &productPatch)
+
+	p, err := h.productService.UpdateProduct(r.Context(), productId, productPatch)
+	if err != nil {
+		if errors.Is(err, product.ErrProductNotFound) {
+			httptools.SendJSONResponse(w, http.StatusNotFound, err)
+			return
+		}
+		httptools.SendJSONResponse(w, http.StatusInternalServerError, err)
+		return
+	}
 	product := Product{
-		Name:          "Chicken egg",
-		Price:         0.2,
-		StockQuantity: 100,
-		ProductId:     "37c4b517-67b1-49d5-ac89-f3f2acb0bb31",
+		Description:   p.Description,
+		Name:          p.Name,
+		Price:         p.Price,
+		StockQuantity: p.Quantity,
+		ProductId:     p.ProductId,
 	}
 	httptools.SendJSONResponse(w, http.StatusOK, product)
 }
@@ -84,14 +108,22 @@ func (h handler) PatchProductProductId(w http.ResponseWriter, r *http.Request, p
 // Get list of products
 // (GET /products)
 func (h handler) GetProducts(w http.ResponseWriter, r *http.Request) {
-	result := []ProductSummary{{
-		Name:          "Chicken egg",
-		Price:         0.2,
-		StockQuantity: 100,
-	}, {
-		Name:          "Quail egg",
-		Price:         0.12,
-		StockQuantity: 400,
-	}}
-	httptools.SendJSONResponse(w, http.StatusOK, result)
+	ps, err := h.productService.GetProducts(r.Context())
+	if err != nil {
+		httptools.SendJSONResponse(w, http.StatusInternalServerError, err)
+		return
+	}
+
+	products := make([]Product, 0, len(ps))
+	for _, p := range ps {
+		products = append(products, Product{
+			Description:   p.Description,
+			Name:          p.Name,
+			Price:         p.Price,
+			StockQuantity: p.Quantity,
+			ProductId:     p.ProductId,
+		})
+	}
+
+	httptools.SendJSONResponse(w, http.StatusOK, products)
 }
