# internal/ports/http/v1/openapi_types.gen.go
@@ -3,6 +3,11 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.15.0 DO NOT EDIT.
 package v1
 
+// CreatedProductId defines model for CreatedProductId.
+type CreatedProductId struct {
+	ProductId *string `json:"product_id,omitempty"`
+}
+
 // Product defines model for Product.
 type Product struct {
 	Description   string  `json:"description"`
